--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -1,1 +1,3 @@
-<h1>Sorry malena. Adem was doing some important work on this website.</h1>
+<h1>Hello Samra. Adem is sorry, but he was doing some important work on this website. </h1>
+
+<p>Soon on <a href=">www.rentaj.best">www.rentaj.best</a></p>
