added under cunstruction tepmlate

--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -1,3 +1,16 @@
-<h1>Hello Samra. Adem is sorry, but he was doing some important work on this website. </h1>
+<style>
+  body { text-align: center; padding: 150px; }
+  h1 { font-size: 50px; }
+  body { font: 20px Helvetica, sans-serif; color: #333; }
+  article { display: block; text-align: left; width: 650px; margin: 0 auto; }
+  a { color: #dc8100; text-decoration: none; }
+  a:hover { color: #333; text-decoration: none; }
+</style>
 
-<p>Soon on <a href=">www.rentaj.best">www.rentaj.best</a></p>
+<article>
+    <h1>Uskoro sa vama!</h1>
+    <div>
+        <p>Trenutni sajt <a href='https:://www.rentaj.best'>rentaj.best</a> je pod izradom. Hvala na strpljenju.</p>
+        <p>&mdash; Naš Team</p>
+    </div>
+</article>
