--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,11 +10,10 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require_tree .
- *= require_self
  */
 
 @import "bootstrap";
+@import 'toastr';
 
 #main-container {
   position: relative;
@@ -40,12 +39,3 @@ body {
   background: #f2f2f2;
 }
 
-th {
-  background-color: #333333;
-  color: white;
-}
-
-td {
-  background-color: #808080;
-  color: white;
-}
