--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,11 @@
 @import "bootstrap";
 @import 'toastr';
 
+#content {
+  margin: 40px;
+  padding-top: 20px;
+}
+
 #main-container {
   position: relative;
   padding-top: 50px;
