--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -8,7 +8,8 @@ html
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   body
-    = yield
+    #content
+      = yield
 
 = render 'layouts/flash_messages'
 
