--- a/app/views/home/home.slim
+++ b/app/views/home/home.slim
@@ -5,4 +5,6 @@
   div
     = link_to "My posts", posts_path
   div
+    = link_to "Categories", categories_path
+  div
     = link_to "Logout", destroy_user_session_path, method: :delete
