--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -10,8 +10,8 @@
     = f.label :title
     = f.text_field :title
   .field
-    = f.label :category
-    = f.text_field :category
+    = f.label :category_id
+    = select_tag 'post[category_id]', options_for_select(Category.all.collect{ |c| [c.name, c.id] })
   .field
     = f.label :images
     = f.text_field :images
