--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -16,7 +16,7 @@ table
     - @posts.each do |post|
       tr
         td = post.title
-        td = post.category
+        td = post.category.name
         td = post.images
         td = post.description
         td = post.contact
