added simple_form_for and tweaked categories controller and views

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,9 +20,12 @@
   padding-top: 20px;
 }
 
+#navbar {
+  margin: 40px 0px 0px 40px;
+}
+
 #main-container {
   position: relative;
-  padding-top: 50px;
   padding-bottom: 50px;
   margin: 20px;
 }
