--- a/app/views/categories/index.slim
+++ b/app/views/categories/index.slim
@@ -1,1 +1,19 @@
-= @categories.first.name
+h1 Listing posts
+
+table
+  thead
+    tr
+      th Name
+      th
+      th
+
+  tbody
+    - @categories.each do |category|
+      tr
+        td = category.name
+        td = link_to 'Edit', edit_category_path(category)
+        td = link_to 'Destroy', category, data: { confirm: 'Are you sure?' }, method: :delete
+
+br
+
+= link_to 'New Category', new_category_path
