--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -1,4 +1,4 @@
-= form_for @post do |f|
+= simple_form_for @post do |f|
   - if @post.errors.any?
     #error_explanation
       h2 = "#{pluralize(@post.errors.count, "error")} prohibited this post from being saved:"
@@ -7,18 +7,13 @@
           li = message
 
   .field
-    = f.label :title
-    = f.text_field :title
+    = f.input :title
   .field
-    = f.label :category_id
-    = select_tag 'post[category_id]', options_for_select(Category.all.collect{ |c| [c.name, c.id] })
+    = f.input :category_id, as: :select, collection: Category.all
   .field
-    = f.label :images
-    = f.text_field :images
+    = f.input :images
   .field
-    = f.label :description
-    = f.text_area :description
+    = f.input :description
   .field
-    = f.label :contact
-    = f.text_field :contact
-  .actions = f.submit
+    = f.input :contact
+  .actions = f.button :submit, class: 'btn btn-primary'
