--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -1,5 +1,7 @@
 p#notice = notice
 
+hr
+h3 About Post
 p
   strong Title:
   = @post.title
@@ -15,6 +17,23 @@ p
 p
   strong Contact:
   = @post.contact
+
+hr
+h3 Vehicle
+p
+  strong Model:
+  = @post.vehicle&.model
+p
+  strong Milage:
+  = @post.vehicle&.milage
+
+p
+  strong Fuel:
+  = @post.vehicle&.gas_type
+
+p
+  strong Year:
+  = @post.vehicle&.production_year
 
 => link_to 'Edit', edit_post_path(@post)
 '|
