--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -8,9 +8,8 @@ html
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   body
-    #navbar
-      = link_to "Home", root_path
-    #content
+    = render 'layouts/navbar'
+    .container
       = yield
 
 = render 'layouts/flash_messages'
