added search datetime range picker

--- a/app/views/home/home.slim
+++ b/app/views/home/home.slim
@@ -1,3 +1,9 @@
 .container
   h1 Welcome
   h3 = current_user.email
+
+  .search-box
+    = simple_form_for @posts, url: search_posts_path do |f|
+      = f.input :title, input_html: { class: "daterange" }, as: :string, label: false
+      = f.submit 'Search now', class: 'btn btn-primary'
+
