--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.search-box {
+  padding: 15px;
+  margin: 15px 0px;
+  width: 400px;
+  border: 1px solid black;
+  border-radius: 5px;
+  background-color: lightgrey;
+  float: left;
+}
