--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -7,4 +7,25 @@ body {
 
 .container {
   padding-top: 20px;
+  min-height: 75vh;
+}
+
+.navbar {
+  background-color: #3579F6 !important;
+}
+
+.page-footer {
+  background-color: #3579F6;
+  width: 100%;
+}
+.right {
+  float: right;
+}
+
+.left {
+  float: left;
+}
+
+.w-300 {
+  width: 300px;
 }
