--- a/app/views/home/home.slim
+++ b/app/views/home/home.slim
@@ -1,9 +1,14 @@
 .container
-  h1 Welcome
-  h3 = current_user.email
+  .row
+    .col-md-6
+      h1 Welcome
+      h3 = current_user.email
 
-  .search-box
-    = simple_form_for @posts, url: search_posts_path do |f|
-      = f.input :title, input_html: { class: "daterange" }, as: :string, label: false
-      = f.submit 'Search now', class: 'btn btn-primary'
+    .col-md-6
+      .search-box
+        h4 Search vehicles
+        = simple_form_for @posts, url: search_posts_path do |f|
+          = f.input :title, input_html: { class: "daterange" }, as: :string, label: false
+          = f.submit 'Search now', class: 'btn btn-primary'
+
 
