--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -11,6 +11,7 @@ html
     = render 'layouts/navbar'
     .container
       = yield
+  = render 'layouts/footer'
 
 = render 'layouts/flash_messages'
 
