added full calendar gem

--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -28,3 +28,5 @@
           = vehicle.input :milage
           = vehicle.input :gas_type
       .actions = f.button :submit, class: 'btn btn-primary'
+  .row
+    #calendar
