init slot model and controller

--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -28,5 +28,9 @@
           = vehicle.input :milage
           = vehicle.input :gas_type
       .actions = f.button :submit, class: 'btn btn-primary'
+  hr
   .row
-    #calendar
+    / # = input :title, input_html: { class: "daterange" }, as: :string, label: false
+    = text_field_tag "new_slot", nil, class: 'daterange w-300 m-r-sm'
+    = button_tag 'Generate slots', class: 'btn btn-primary'
+    #calendar data-post-id=@post.id data-schedule-create-url=slots_path
