generating slots through frontend

--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -32,5 +32,5 @@
   .row
     / # = input :title, input_html: { class: "daterange" }, as: :string, label: false
     = text_field_tag "new_slot", nil, class: 'daterange w-300 m-r-sm'
-    = button_tag 'Generate slots', class: 'btn btn-primary'
-    #calendar data-post-id=@post.id data-schedule-create-url=slots_path
+    = link_to 'Generate slots', '#', class: 'btn btn-primary js-generate-slot'
+    #calendar data-post-id=@post.id data-slot-create-url=slots_path
