--- a/app/views/home/home.slim
+++ b/app/views/home/home.slim
@@ -2,7 +2,7 @@
   .row
     .col-md-6
       h1 Welcome
-      h3 = current_user.email
+      h3 = current_user&.email
 
     .col-md-6
       .search-box
