added sweet alert

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,4 +18,6 @@
 @import 'toastr';
 @import 'flexslider';
 @import 'fullcalendar';
+@import 'sweetalert';
+@import 'sweetalert/themes/twitter';
 @import 'style';
