--- a/app/views/posts/search.slim
+++ b/app/views/posts/search.slim
@@ -1,1 +1,7 @@
-h1 Search
+.container.py-5
+  .row.text-center.mb-5
+    .col-lg-7.mx-auto
+      h1.display-4 Available vehicles
+      p.lead.mb-0 = "These vehicles are available in the desired time range"
+      p.lead.mb-0 = "From: #{@from.to_date} to: #{@to.to_date}"
+  = render 'post_list', posts: @posts, edit: false
