--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -17,7 +17,7 @@ p#notice = notice
             li
               = image_tag image, class: 'post-img'
   .col-md-5
-    - if current_user.ability.can?(:edit, @post)
+    - if current_ability.can?(:edit, @post)
       #calendar data-post-id=@post.id data-slot-url=slots_path data-generate-slots-url=for_post_slots_path(post_id: @post.id, format: 'json')
 
 .row
