--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -34,7 +34,7 @@
     = text_field_tag "new_slot", nil, class: 'daterange w-300 m-r-sm'
     = text_field_tag "title", nil, class: 'js-title w-300 m-r-sm'
     = link_to 'Generate slots', '#', class: 'btn btn-primary js-generate-slot'
-    #calendar data-post-id=@post.id data-slot-url=slots_path data-generate-slots-url=for_post_slots_path(post_id: @post.id, format: 'json')
+    #calendar data-post-id=@post.id data-slot-url=slots_path data-generate-slots-url=for_post_slots_path(post_id: @post.id, format: 'json') data-last-slot-path=last_slot_slots_path(format: 'json', post_id: @post.id)
 
 / .container
 /   .row.m-y-2
