making the adding and removing od slots more robust

--- a/app/views/shared/uploaders/_image_uploader.slim
+++ b/app/views/shared/uploaders/_image_uploader.slim
@@ -5,7 +5,7 @@
 - default_image ||= 'fa-user'
 
 .js-image-uploader-container
-  .js-image-uploader.gazzda-uploader.image-uploader class=scope_class
+  .js-image-uploader.image-uploader class=scope_class
     .button-wrapper.m-t
       = form_builder.input attribute, as: :file, label: false, input_html: { multiple: true }
     .image-preview.js-image-preview
