--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -3,10 +3,10 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .post-img {
-  width: 200px;
+  width: 100%;
 }
 
 .show-flex {
-  width: 300px;
+  width: 500px;
 }
 
