--- a/app/views/layouts/_navbar.slim
+++ b/app/views/layouts/_navbar.slim
@@ -9,7 +9,7 @@ nav.navbar.navbar-expand-sm.bg-dark.navbar-dark
       li.nav-item
         = link_to "Kombi", posts_path, class: 'nav-link'
       li.nav-item
-        = link_to "Contact", root_path, class: 'nav-link'
+        = link_to "Messages", conversations_path, class: 'nav-link'
   .navbar-collapse.collapse.w-100.order-3.dual-collapse2
     ul.navbar-nav.ml-auto
       li.nav-item
