added user to post, refactored messaging

--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -8,6 +8,7 @@
   .row
     .col-md-7
       .field
+        = f.input :user_id, as: :hidden, input_html: { value: current_user.id }
         = f.input :title
       .field
         = f.input :category_id, as: :select, collection: Category.all
