--- a/app/views/layouts/_navbar.slim
+++ b/app/views/layouts/_navbar.slim
@@ -13,5 +13,8 @@ nav.navbar.navbar-expand-sm.bg-dark.navbar-dark
   .navbar-collapse.collapse.w-100.order-3.dual-collapse2
     ul.navbar-nav.ml-auto
       li.nav-item
-        = link_to "Logout", destroy_user_session_path, method: :delete, class: 'nav-link'
+        - if current_user
+          = link_to "Logout", destroy_user_session_path, method: :delete, class: 'nav-link'
+        - else
+          = link_to "Sign in", new_user_session_path, method: :get, class: 'nav-link'
 
