--- a/app/views/messages/index.slim
+++ b/app/views/messages/index.slim
@@ -1,24 +1,22 @@
-.ui.segment.message-container
-  - @messages.each do |message|
-    - if message.body
-      - user = User.find(message.user_id)
-      .item
-        .content
-          .header.border.m-b-xl style="margin-bottom: 50px;"
-            strong
-              = user.email
-            .p-l-xs
-              = message.message_time
-            .list
-              .item.border
-                .right.triangle.icon
-                  = message.body
-  - if @over_ten
-    = link_to 'Show Previous', '?m=all'
-
-= form_for [@conversation, @message], html: {class: "ui reply form"} do |f|
-  .field
-    = f.text_area :body, class: "form-control"
-    = f.text_field :user_id, value: current_user.id, type: "hidden"
-  div
-    = f.submit "Add Reply", class: "btn btn-primary"
+.messaging
+  .inbox_msg
+    .inbox_people
+      .headind_srch
+        .recent_heading
+          h4 Recent
+        .srch_bar
+          .stylish-input-group
+            input.search-bar placeholder="Search" type="text" /
+            span.input-group-addon
+              button type="button"
+                i.fa.fa-search aria-hidden="true"
+      .inbox_chat
+        = render 'chat_list'
+    .mesgs
+      .msg_history
+        - if @over_ten
+          = link_to 'Show more', '?m=all'
+        = render 'messages', messages: @messages
+      .type_msg
+        .input_msg_write
+        = render 'form_send_message'
