--- a/app/views/layouts/_navbar.slim
+++ b/app/views/layouts/_navbar.slim
@@ -13,5 +13,7 @@ nav.navbar.navbar-expand-sm.bg-dark.navbar-dark
   .navbar-collapse.collapse.w-100.order-3.dual-collapse2
     ul.navbar-nav.ml-auto
       li.nav-item
+        = link_to 'Account', edit_user_registration_path, class: 'nav-link'
+      li.nav-item
         = link_to "Logout", destroy_user_session_path, method: :delete, class: 'nav-link'
 
