working example of adding avatar to user, some css changes to navbar

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 
   <div class="field">
-    <%= render 'shared/uploaders/image_uploader', form_builder: f, attribute: :profile_picture, multiple: false, default_image: 'fa-photo' %>
+    <%= render 'shared/uploaders/image_uploader', form_builder: f, attribute: :avatar, multiple: false, default_image: 'fa-photo' %>
   </div>
 
   <div class="field">
