--- a/app/views/layouts/_navbar.slim
+++ b/app/views/layouts/_navbar.slim
@@ -1,5 +1,5 @@
 nav.navbar.navbar-expand-sm.bg-dark.navbar-dark
-  a.navbar-brand href="#"  RentAKombi
+  a.navbar-brand href=root_path  RentAKombi
   button.navbar-toggler data-target="#collapsibleNavbar" data-toggle="collapse" type="button"
     span.navbar-toggler-icon
   #collapsibleNavbar.collapse.navbar-collapse
@@ -10,10 +10,15 @@ nav.navbar.navbar-expand-sm.bg-dark.navbar-dark
         = link_to "Kombi", posts_path, class: 'nav-link'
       li.nav-item
         = link_to "Contact", root_path, class: 'nav-link'
-  .navbar-collapse.collapse.w-100.order-3.dual-collapse2
-    ul.navbar-nav.ml-auto
-      li.nav-item
-        = link_to 'Account', edit_user_registration_path, class: 'nav-link'
-      li.nav-item
-        = link_to "Logout", destroy_user_session_path, method: :delete, class: 'nav-link'
+  - if current_user
+    .navbar-collapse.collapse.w-100.order-3.dual-collapse2
+      ul.navbar-nav.ml-auto
+        li.nav-item
+          = link_to 'Account', edit_user_registration_path, class: 'nav-link'
+        li.nav-item
+          = link_to "Logout", destroy_user_session_path, method: :delete, class: 'nav-link'
+        li.nav-item
+          = render 'shared/users/navbar_photo'
+
+
 
