--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -13,6 +13,7 @@ body {
 .navbar {
   background-color: #3579F6 !important;
   padding: 5px 100px;
+
 }
 
 .page-footer {
@@ -46,5 +47,5 @@ body {
 
 .nav-link:hover {
   background-color: darkblue;
-  border-radius: 10%;
+  color: white !important;
 }
