--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -11,9 +11,16 @@
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
 
-  <div class="field">
-    <%= f.input :avatar, as: :file, label: false %>
+  <div class="input-group">
+    <div class="input-group-prepend">
+      <span class="input-group-text" id="inputGroupFileAddon01">Upload profile photo</span>
+    </div>
+    <div class="custom-file">
+        <%= f.input :avatar, as: :file, label: false, input_html: { class: 'custom-file-input' }%>
+      <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
+    </div>
   </div>
+
 
   <div class="field">
     <%= image_tag resource.avatar, class: 'post-img' if resource.avatar.attached?  %>
@@ -39,12 +46,9 @@
     <%= f.button :submit, class: 'btn btn-primary' %>
   </div>
 <% end %>
-
 <h3>Cancel my account</h3>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), class: 'btn btn-danger', data: { confirm: "Are you sure?" }, method: :delete %></p>
 
-<%= link_to "Back", :back %>
-path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<%= link_to "Back", :back, class: 'btn btn-info' %>
 
-<%= link_to "Back", :back %>
