--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -46,6 +46,7 @@ p#notice = notice
       strong Year:
       = @post.vehicle&.production_year
 
-    => link_to 'Edit', edit_post_path(@post)
-    '|
+    - if can?(:edit, @post)
+      = link_to 'Edit', edit_post_path(@post)
+    br
     =< link_to 'Back', posts_path
