--- a/app/views/shared/uploaders/_image_uploader.slim
+++ b/app/views/shared/uploaders/_image_uploader.slim
@@ -12,7 +12,7 @@
     .image-preview.js-image-preview
       .flexslider.show-flex
         ul.slides
-          / - object.images&.each do |image|
-          /   li
-          /     = image_tag image, class: 'post-img'
-          /     = link_to 'x', remove_attachment_post_path(image.id), method: :delete
+          - object.images&.each do |image|
+            li
+              = image_tag image, class: 'post-img'
+              = link_to 'x', remove_attachment_post_path(image.id), method: :delete
