--- a/app/views/messages/_chat_list.slim
+++ b/app/views/messages/_chat_list.slim
@@ -3,10 +3,10 @@
     .chat_list class="#{params[:conversation_id] == conversation.id.to_s ? 'active_chat' : ''}"
       .chat_people
         .chat_img
-          img alt="sunil" src="https://ptetutorials.com/images/user-profile.png" /
+          = image_tag conversation.recipient_of(current_user).profile_image, class: 'img-circle'
         .chat_ib
           h5
-            = conversation.recipient_name(current_user)
+            = conversation.recipient_of(current_user).full_name
             span.chat_date = conversation.messages.last.message_time
           p
             = conversation.messages.last.body
