--- a/app/views/messages/_incoming_message.slim
+++ b/app/views/messages/_incoming_message.slim
@@ -1,6 +1,6 @@
 .incoming_msg
   .incoming_msg_img
-    img alt="sunil" src="https://ptetutorials.com/images/user-profile.png" /
+    = image_tag @conversation.recipient_of(current_user).profile_image, class: 'img-circle'
   .received_msg
     .received_withd_msg
       p = text
