--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -30,8 +30,8 @@ p#notice = notice
     p
       strong Seller:
       = @post.user.email
-      .messaging
-        = link_to ' Message seller!', conversations_path(sender_id: current_user.id, recipient_id: @post.user.id), method: 'post', class: 'btn btn-sm btn-success mt-3' unless current_user.my_post?(@post)
+      .messaging data-conversation-url=conversations_path(sender_id: current_user.id, recipient_id: @post.user.id, format: 'json') data-current-user-id=current_user.id
+      = link_to ' Message renter', '#', class: 'btn btn-sm btn-success btn-rounded mb-4', data: { target: "#modalContactForm", toggle: "modal" } unless current_user.my_post?(@post)
     hr
     h3 Vehicle
     p
@@ -53,3 +53,6 @@ p#notice = notice
       = link_to 'Edit', edit_post_path(@post)
     br
     =< link_to 'Back', posts_path
+
+= render 'shared/modals/contact_renter_modal', post: @post  unless current_user.my_post?(@post)
+
