--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -133,3 +133,16 @@ img{ max-width:100%;}
   height: 516px;
   overflow-y: auto;
 }
+
+.attached_post {
+  border: 1px solid #12728E;
+  font-size: 10px;
+  padding: 10px;
+  background_color: red;
+  z-index: 9999999999;
+}
+
+.unread-message {
+  border: 1px solid #05728f;
+}
+
