--- a/app/views/layouts/_navbar.slim
+++ b/app/views/layouts/_navbar.slim
@@ -8,8 +8,10 @@ nav.navbar.navbar-expand-sm.bg-dark.navbar-dark
         = link_to "Home", root_path, class: 'nav-link'
       li.nav-item
         = link_to "Kombi", posts_path, class: 'nav-link'
-      li.nav-item
-        = link_to "Messages", conversations_path, class: 'nav-link'
+      - if current_user
+        li.nav-item
+          = link_to "Messages", conversations_path, class: 'nav-link'
+          = content_tag :span, current_user.unread_messages, class: 'button__badge' unless current_user.unread_messages.zero?
     .navbar-collapse.collapse.w-100.order-3.dual-collapse2
       ul.navbar-nav.ml-auto
         - if current_user
