--- a/app/views/messages/_incoming_message.slim
+++ b/app/views/messages/_incoming_message.slim
@@ -3,5 +3,9 @@
     = image_tag @conversation.recipient_of(current_user).profile_image, class: 'img-circle'
   .received_msg
     .received_withd_msg
-      p = text
-      span.time_date = time
+      - if message.post
+        .attached_post
+          i.fa.fa-paperclip
+          = link_to message.post.title, post_path(message.post), target: '_blank'
+      p = message.body
+      span.time_date = message.message_time
