--- a/app/views/messages/_messages.slim
+++ b/app/views/messages/_messages.slim
@@ -1,3 +1,3 @@
 - messages.each do |message|
   - to_render = current_user.id == message.user_id ? 'outgoing_message' : 'incoming_message'
-  = render to_render, text: message.body, time: message.message_time
+  = render to_render, message: message
