--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -1,6 +1,6 @@
 .container.py-5
   .row.text-center.mb-5
     .col-lg-7.mx-auto
-      h1.display-4 All vehicles
-      p.lead.mb-0 = "Listing all available vehicles"
+      h1.display-4 My vans
+      p.lead.mb-0 = "The ones I posted"
   = render 'post_list', posts: @posts, edit: true
