--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -8,6 +8,6 @@
   width: 400px;
   border: 1px solid black;
   border-radius: 5px;
-  background-color: lightgrey;
+  background-color: #73C2FB;
   float: left;
 }
