--- a/app/views/layouts/_navbar.slim
+++ b/app/views/layouts/_navbar.slim
@@ -15,12 +15,13 @@ nav.navbar.navbar-expand-sm.bg-dark.navbar-dark
     .navbar-collapse.collapse.w-100.order-3.dual-collapse2
       ul.navbar-nav.ml-auto
         - if current_user
-          li.nav-item
-            = link_to 'Account', edit_user_registration_path, class: 'nav-link'
-          li.nav-item
-            = link_to "Logout", destroy_user_session_path, method: :delete, class: 'nav-link'
-          li.nav-item
-            = render 'shared/users/navbar_photo'
+          .mt-2.mr-3.text-white  = current_user.full_name
+          li.dropdown
+            .dropdown-toggle data-toggle="dropdown"
+              = render 'shared/users/navbar_photo'
+            .dropdown-menu
+              = link_to 'Account', edit_user_registration_path, class: 'dropdown-item'
+              = link_to "Logout", destroy_user_session_path, method: :delete, class: 'dropdown-item'
         - else
           li.nav-item
             = link_to "Sign in", new_user_session_path, method: :get, class: 'nav-link'
