--- a/app/views/users/registrations/edit.slim
+++ b/app/views/users/registrations/edit.slim
@@ -16,31 +16,19 @@ h2 = resource_name.to_s.humanize
       - if devise_mapping.confirmable? && resource.pending_reconfirmation?
         div = "Currently waiting confirmation for: #{resource.unconfirmed_email}"
 
-      .field
-        = f.input :current_password, autocomplete: "current-password"
 
       .field
-        = f.input :password, autocomplete: "new-password"
-        - if @minimum_password_length
-          br
-          em = "#{@minimum_password_length} characters minimum"
+        button.btn.btn-danger.btn-sm.my-4.js-change-password data-target=".password-fields" data-toggle="collapse" aria-expanded="false" Change password
 
-      .field
-        = f.input :password_confirmation, autocomplete: "new-password"
+      .password-fields.m-b.collapse
+        .field
+          = f.input :password, input_html: { autocomplete: 'off' }
+          - if @minimum_password_length
+            br
+            em = "#{@minimum_password_length} characters minimum"
 
-      .actions
-        = f.button :submit, class: 'btn btn-primary'
-
-    .col-md-6
-      .input-group
-        .input-group-prepend
-          span.input-group-text id="inputGroupFileAddon01" Upload profile photo
-
-        .custom-file
-            = f.input :avatar, as: :file, label: false, input_html: { class: 'custom-file-input' }
-            label class="custom-file-label" for="inputGroupFile01" = "Choose file"
-      .field
-        = image_tag resource.avatar, class: 'post-img' if resource.avatar.attached?
+        .field
+          = f.input :password_confirmation, input_html: { autocomplete: 'off' }
 
       .field
         = f.input :phone_number, autofocus: true, autocomplete: "phone_number"
@@ -55,6 +43,24 @@ h2 = resource_name.to_s.humanize
 
       .field
         = f.input :dob, as: :date, autofocus: true, autocomplete: "dob"
+      .field
+        = render 'shared/modals/confirm_password_modal'
+
+      .actions
+        = link_to "Update user", '#', class: 'btn btn-sm btn-primary btn-rounded js-update-user mt-2', data: { target: "#confirm-changes-modal", toggle: "modal" }
+
+    .col-md-6
+      .input-group
+        .input-group-prepend
+          span.input-group-text id="inputGroupFileAddon01" Upload profile photo
+
+        .custom-file
+            = f.input :avatar, as: :file, label: false, input_html: { class: 'custom-file-input' }
+            label class="custom-file-label" for="inputGroupFile01" = "Choose file"
+      .field
+        = image_tag resource.avatar, class: 'post-img' if resource.avatar.attached?
+
+
 
 
 = link_to "Back", :back, class: 'btn btn-info mt-2'
