--- a/app/views/posts/_post_list.slim
+++ b/app/views/posts/_post_list.slim
@@ -1,28 +1,28 @@
 - edit ||= false
-.row
-  .col-lg-8.mx-auto
-    ul.list-group.shadow
-      - posts.each do |post|
-        li.list-group-item
-          /! Custom content
-          .media.align-items-lg-center.flex-column.flex-lg-row.p-3
-            .media-body.order-2.order-lg-1
-              h5.mt-0.font-weight-bold.mb-2 = link_to post.title, post
-              p.font-italic.text-muted.mb-0.small = post.description
-              .d-flex.align-items-center.justify-content-between.mt-1
-                h6.font-weight-bold.my-2 120.00 KM
-                ul.list-inline.small
-                  li.list-inline-item.m-0
-                    i.fa.fa-star.text-success
-                  li.list-inline-item.m-0
-                    i.fa.fa-star.text-success
-                  li.list-inline-item.m-0
-                    i.fa.fa-star.text-success
-                  li.list-inline-item.m-0
-                    i.fa.fa-star.text-success
-                  li.list-inline-item.m-0
-                    i.fa.fa-star-o.text-gray
-              h6.mt-0.font-weight-bold.mb-2.mt-4 = link_to 'Edit', edit_post_path(post) if current_user&.admin? && edit
 
-            = image_tag post.images.first, class: 'img ml-lg-5 order-1 order-lg-2 w-200'
+ul.list-group.shadow
+  - posts.each do |post|
+    li.list-group-item
+      .media.align-items-lg-center.flex-column.flex-lg-row.p-3
+        .media-body.order-2.order-lg-1
+          h5.mt-0.font-weight-bold.mb-2 = link_to post.title, post
+          p.font-italic.text-muted.mb-0.small = post.description
+          .d-flex.align-items-center.justify-content-between.mt-1
+            h6.font-weight-bold.my-2 120.00 KM
+          .d-flex.align-items-center.justify-content-between.mt-1 style='flex-wrap: wrap;'
+            .info-tag
+              span.left Fuel
+              span.right Diesel
+            .info-tag
+              span.left Transmission
+              span.right Manual
+            .info-tag
+              span.left Year
+              span.right 2017
+            .info-tag
+              span.left Model
+              span.right Opel
+          h6.mt-0.font-weight-bold.mb-2.mt-4 = link_to 'Edit', edit_post_path(post) if current_user&.admin? && edit
+
+        = image_tag post.images.first, class: 'img ml-lg-5 order-1 order-lg-2 w-200'
 
