--- a/app/views/home/home.slim
+++ b/app/views/home/home.slim
@@ -8,7 +8,7 @@
       .search-box
         h4 Search vehicles
         = simple_form_for :search, url: search_posts_path, method: 'GET' do |f|
-          = f.input :daterange, input_html: { class: "daterange" }, as: :string, label: false
+          = f.input :availability, input_html: { class: "daterange" }, as: :string, label: false
           = f.submit 'Search now', class: 'btn btn-primary'
 
 
