--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -1,6 +1,4 @@
 .container.py-5
-  .row.text-center.mb-5
-    .col-lg-7.mx-auto
-      h1.display-4 All vehicles
-      p.lead.mb-0 = "Listing all available vehicles"
-  = render 'post_list', posts: @posts, edit: true
+  .row
+    .col-lg-8.mx-auto
+      = render 'post_list', posts: @posts, edit: true
