--- a/app/views/home/home.slim
+++ b/app/views/home/home.slim
@@ -1,14 +1,46 @@
-.container
-  .row
-    .col-md-6
-      h1 Welcome
-      h3 = current_user&.email
-
-    .col-md-6
+- search_box = capture do
+  .col-md-6
       .search-box
         h4 Search vehicles
         = simple_form_for :search, url: search_posts_path, method: 'GET' do |f|
           = f.input :availability, input_html: { class: "daterange" }, as: :string, label: false
           = f.submit 'Search now', class: 'btn btn-primary'
+end
 
+header
+  #carouselExampleIndicators.carousel.slide.carousel-container data-ride="carousel"
+    ol.carousel-indicators
+      li.active data-slide-to="0" data-target="#carouselExampleIndicators"
+      li data-slide-to="1" data-target="#carouselExampleIndicators"
+      li data-slide-to="2" data-target="#carouselExampleIndicators"
+    .carousel-inner role="listbox"
+      .carousel-item.active style=("background-image: url('https://vmwebsitestore.blob.core.windows.net/media/vehicle-images/LM67FXS/a9aac297-088d-432f-8662-b991be5d33c2.jpg')")
+        .carousel-caption.d-none.d-md-block
+          h2.display-4 = search_box
+      .carousel-item style=("background-image: url('https://i.ytimg.com/vi/96vpTJd0lQA/maxresdefault.jpg')")
+        .carousel-caption.d-none.d-md-block
+          h2.display-4 = search_box
+          p.lead This is a description for the second slide.
+      .carousel-item style=("background-image: url('https://cdn.vox-cdn.com/thumbor/RIBWyNdFvgJU9D6DlhsKcHSc4kw=/0x0:5760x3840/1200x800/filters:focal(2420x1460:3340x2380)/cdn.vox-cdn.com/uploads/chorus_image/image/59293591/OSV18_01_PowerStation_Hero.0.jpg')")
+        .carousel-caption.d-none.d-md-block
+          h2.display-4 = search_box
+          p.lead The place for your rental
+    a.carousel-control-prev data-slide="prev" href="#carouselExampleIndicators" role="button"
+      span.carousel-control-prev-icon aria-hidden="true"
+      span.sr-only Previous
+    a.carousel-control-next data-slide="next" href="#carouselExampleIndicators" role="button"
+      span.carousel-control-next-icon aria-hidden="true"
+      span.sr-only Next
+
+.row
+  .col-md-6
+    h1 Welcome
+    h3 = current_user&.email
+
+  .col-md-6
+    .search-box
+      h4 Search vehicles
+      = simple_form_for :search, url: search_posts_path, method: 'GET' do |f|
+        = f.input :availability, input_html: { class: "daterange" }, as: :string, label: false
+        = f.submit 'Search now', class: 'btn btn-primary'
 
