added datatables plugin to conversations

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,11 +14,13 @@
  */
 
 
-@import "bootstrap";
+@import 'bootstrap';
 @import 'toastr';
 @import 'flexslider';
 @import 'fullcalendar';
 @import 'sweetalert';
 @import 'sweetalert/themes/twitter';
 @import "font-awesome";
+@import 'dataTable/datatable';
 @import 'style';
+
