--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -158,7 +158,7 @@ ul.inbox-sidebar-list{
 
   li {
     margin: 2px 0px;
-    background-color: #3579F6;
+    background-color: #99CCFF;
     height: 40px;
     border-radius: 5px;
     padding: 8px 0px 0px 10px;
@@ -172,6 +172,6 @@ ul.inbox-sidebar-list{
 
   li:hover {
     color: white;
-    background-color: darkblue;
+    background-color: #3579F6;
   }
 }
