--- a/app/assets/javascripts/templates/messages.jst.ejs
+++ b/app/assets/javascripts/templates/messages.jst.ejs
@@ -1,4 +1,4 @@
 <h1>Message</h1>
 <% for (var i = 0; i < data.length; i++) { %>
-  <p><%= data[i].post_id %></p>
+  <p><%= data[i].body %></p>
 <% } %>
