--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -5,7 +5,7 @@
 @import 'datatable';
 
 body {
-  background: #f2f2f2;
+  // background: #f2f2f2;
   font-family: 'Avenir', Helvetica, Arial, sans-serif;
 }
 
