--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,7 +10,6 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require daterangepicker
  */
 
 
@@ -22,5 +21,6 @@
 @import 'sweetalert/themes/twitter';
 @import "font-awesome";
 @import 'dataTable/datatable';
+@import 'datetimepicker/flatpickr.min';
 @import 'style';
 
